Hier sammeln wir Aenderungsnotizen fuer die aktuelle Firmware (seit dem letzten Release).
Im Fall eines Release dienen die Notizen zum Befüllen des Changelogs im Wiki:
 https://wiki.opennet-initiative.de/wiki/Opennet_Firmware_Versionen
Anschließend kann diese Liste wieder geleert werden.


= Änderungen aus Nutzersicht =
* bisher fehlende Funktionalitäten (im Vergleich zu v0.4-5) integriert:
** Internetspender (UGW)
** öffentliche Zugangspunkte (zuvor: "wifidog")
* Nutzer-VPN-Tunnel wird innerhalb von ca. drei Minuten nach dem Booten aufgebaut
** zuvor waren es ca. acht Minuten
* keine VPN-Verbindungstests ohne Zertifikat
** weniger Load für Infrastruktur-APs
** kurze Wartezeit zwischen Zertifikatsupload und Verbindungsaufbau
* verschlüsselte Verbindung mit dem Web-Interface
** automatische Umleitung http->https
* Verfallsdatum des eigenen VPN-Zertifikats wird angezeigt
* reduzierter RAM-Speicherbedarf
** auf Geräten mit 32 MB RAM gab es zuvor gelegentlich Neustarts durch Speichermangel
* POE-Weiterleitung kann via Web-Interface kontrolliert werden
* Status-Seite: Anzahl der Routen für jeden Nachbarn wird angezeigt
* Fehlerkorrekturen:
** lokale IP wird nicht mehr auf 172.16.0.1 zurückgesetzt (falls lokal modifiziert)
** Geschwindigkeitsanzeige in der Gatewayliste hinzugefügt
** korrekte Zeitstempel-Ermittlung für reboot-Logeintrag (/etc/banner)
** gemischte Mesh/lokal-Alias-Interfaces sind nun möglich
** fehlerhafte Sortierung der Gateways behoben
** teilweises Vergessen von Gateway-Offsets nach Reboot behoben
*** siehe http://dev.opennet-initiative.de/ticket/85

= Interne Änderungen =
* neue CA-Zertifikate sind nun in einem separaten Paket untergebracht
** zuvor führte ein Upgrade nicht zu einer CA-Aktualisierung
* Internetspender bieten nun mehr als nur einen externen Gateway im Mesh an (via Portweiterleitung)
* UGW-APs veröffentlichen keine zusätzliche HNA im 192.168.0.x-Netzwerk

= Bemerkenswertes / Fehler / Mängel =